Fixing label overflow on checkout page

--- a/woocommerce-gateway-ebanx/assets/css/paying-via-ebanx.css
+++ b/woocommerce-gateway-ebanx/assets/css/paying-via-ebanx.css
@@ -288,6 +288,7 @@ li[class*="ebanx"] .payment_box .ebanx-credit-card-label > .ebanx-credit-card-bi
   width: 100%;
   display: block;
   overflow: hidden;
+  padding: 0 2px;
 }
 
 /* $EBANX BUTTONS */
